🚧⚙ sl-1 ASM試行
ASMで作成したクラスファイル(byte配列)をとりあえずインスタンス化してみた